--- a/src/project/msvc2017/quake3e-ded.vcxproj
+++ b/src/project/msvc2017/quake3e-ded.vcxproj
@@ -29,26 +29,26 @@
   <PropertyGroup Label="Globals">
     <ProjectName>quake3e-ded</ProjectName>
     <ProjectGuid>{81CB51C4-B434-4E12-B69B-BAEE102F2853}</ProjectGuid>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <PlatformToolset>v141_xp</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <PlatformToolset>v141_xp</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM64'" Label="Configuration">
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'" Label="Configuration">
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -258,90 +258,113 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\qcommon\cmd.c" />
-    <ClCompile Include="..\..\qcommon\cm_load.c" />
-    <ClCompile Include="..\..\qcommon\cm_patch.c" />
-    <ClCompile Include="..\..\qcommon\cm_polylib.c" />
-    <ClCompile Include="..\..\qcommon\cm_test.c" />
-    <ClCompile Include="..\..\qcommon\cm_trace.c" />
-    <ClCompile Include="..\..\qcommon\common.c" />
-    <ClCompile Include="..\..\qcommon\cvar.c" />
-    <ClCompile Include="..\..\qcommon\files.c" />
-    <ClCompile Include="..\..\qcommon\history.c" />
-    <ClCompile Include="..\..\qcommon\huffman.c" />
-    <ClCompile Include="..\..\qcommon\huffman_static.c" />
-    <ClCompile Include="..\..\qcommon\keys.c" />
-    <ClCompile Include="..\..\qcommon\md4.c" />
-    <ClCompile Include="..\..\qcommon\md5.c" />
-    <ClCompile Include="..\..\qcommon\msg.c" />
-    <ClCompile Include="..\..\qcommon\net_chan.c" />
-    <ClCompile Include="..\..\qcommon\net_ip.c" />
-    <ClCompile Include="..\..\qcommon\q_math.c" />
-    <ClCompile Include="..\..\qcommon\q_shared.c" />
-    <ClCompile Include="..\..\qcommon\unzip.c" />
-    <ClCompile Include="..\..\qcommon\vm.c" />
-    <ClCompile Include="..\..\qcommon\vm_aarch64.c">
+    <ClCompile Include="..\..\engine\core\cmd.c" />
+    <ClCompile Include="..\..\engine\collision\cm_load.c" />
+    <ClCompile Include="..\..\engine\collision\cm_patch.c" />
+    <ClCompile Include="..\..\engine\collision\cm_polylib.c" />
+    <ClCompile Include="..\..\engine\collision\cm_test.c" />
+    <ClCompile Include="..\..\engine\collision\cm_trace.c" />
+    <ClCompile Include="..\..\engine\core\common.c" />
+    <ClCompile Include="..\..\engine\core\cvar.c" />
+    <ClCompile Include="..\..\engine\filesystem\files.c" />
+    <ClCompile Include="..\..\engine\core\history.c" />
+    <ClCompile Include="..\..\engine\common\compression\huffman.c" />
+    <ClCompile Include="..\..\engine\common\compression\huffman_static.c" />
+    <ClCompile Include="..\..\engine\core\keys.c" />
+    <ClCompile Include="..\..\engine\common\crypto\md4.c" />
+    <ClCompile Include="..\..\engine\common\crypto\md5.c" />
+    <ClCompile Include="..\..\engine\network\msg.c" />
+    <ClCompile Include="..\..\engine\network\net_chan.c" />
+    <ClCompile Include="..\..\engine\network\net_ip.c" />
+    <ClCompile Include="..\..\engine\common\math\q_math.c" />
+    <ClCompile Include="..\..\engine\common\q_shared.c" />
+    <ClCompile Include="..\..\engine\filesystem\unzip.c" />
+    <ClCompile Include="..\..\engine\vm\vm.c" />
+    <ClCompile Include="..\..\engine\vm\vm_aarch64.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="..\..\qcommon\vm_interpreted.c" />
-    <ClCompile Include="..\..\qcommon\vm_x86.c">
+    <ClCompile Include="..\..\engine\vm\vm_interpreted.c" />
+    <ClCompile Include="..\..\engine\vm\vm_x86.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|ARM64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="..\..\server\sv_bot.c" />
-    <ClCompile Include="..\..\server\sv_ccmds.c" />
-    <ClCompile Include="..\..\server\sv_client.c" />
-    <ClCompile Include="..\..\server\sv_filter.c" />
-    <ClCompile Include="..\..\server\sv_game.c" />
-    <ClCompile Include="..\..\server\sv_init.c" />
-    <ClCompile Include="..\..\server\sv_main.c" />
-    <ClCompile Include="..\..\server\sv_net_chan.c" />
-    <ClCompile Include="..\..\server\sv_snapshot.c" />
-    <ClCompile Include="..\..\server\sv_world.c" />
-    <ClCompile Include="..\win_main.c" />
-    <ClCompile Include="..\win_shared.c" />
-    <ClCompile Include="..\win_syscon.c" />
+    <ClCompile Include="..\..\game\server\sv_bot.c" />
+    <ClCompile Include="..\..\game\server\sv_ccmds.c" />
+    <ClCompile Include="..\..\game\server\sv_client.c" />
+    <ClCompile Include="..\..\game\server\network\sv_filter.c" />
+    <ClCompile Include="..\..\game\server\sv_game.c" />
+    <ClCompile Include="..\..\game\server\sv_init.c" />
+    <ClCompile Include="..\..\game\server\sv_main.c" />
+    <ClCompile Include="..\..\game\server\network\sv_net_chan.c" />
+    <ClCompile Include="..\..\game\server\sv_snapshot.c" />
+    <ClCompile Include="..\..\game\server\world\sv_world.c" />
+    <!-- AI Files -->
+    <ClCompile Include="..\..\engine\ai\ai_interface.c" />
+    <ClCompile Include="..\..\engine\ai\behavior\ai_char.c" />
+    <ClCompile Include="..\..\engine\ai\behavior\ai_chat.c" />
+    <ClCompile Include="..\..\engine\ai\behavior\ai_ea.c" />
+    <ClCompile Include="..\..\engine\ai\behavior\ai_gen.c" />
+    <ClCompile Include="..\..\engine\ai\behavior\ai_goal.c" />
+    <ClCompile Include="..\..\engine\ai\behavior\ai_move.c" />
+    <ClCompile Include="..\..\engine\ai\behavior\ai_weap.c" />
+    <ClCompile Include="..\..\engine\ai\behavior\ai_weight.c" />
+    <ClCompile Include="..\..\engine\ai\navigation\aas_bspq3.c" />
+    <ClCompile Include="..\..\engine\ai\navigation\aas_cluster.c" />
+    <ClCompile Include="..\..\engine\ai\navigation\aas_debug.c" />
+    <ClCompile Include="..\..\engine\ai\navigation\aas_entity.c" />
+    <ClCompile Include="..\..\engine\ai\navigation\aas_file.c" />
+    <ClCompile Include="..\..\engine\ai\navigation\aas_main.c" />
+    <ClCompile Include="..\..\engine\ai\navigation\aas_move.c" />
+    <ClCompile Include="..\..\engine\ai\navigation\aas_optimize.c" />
+    <ClCompile Include="..\..\engine\ai\navigation\aas_reach.c" />
+    <ClCompile Include="..\..\engine\ai\navigation\aas_route.c" />
+    <ClCompile Include="..\..\engine\ai\navigation\aas_routealt.c" />
+    <ClCompile Include="..\..\engine\ai\navigation\aas_sample.c" />
+    <ClCompile Include="..\..\engine\ai\util\crc.c" />
+    <ClCompile Include="..\..\engine\ai\util\libvar.c" />
+    <ClCompile Include="..\..\engine\ai\util\log.c" />
+    <ClCompile Include="..\..\engine\ai\util\memory.c" />
+    <ClCompile Include="..\..\engine\ai\util\precomp.c" />
+    <ClCompile Include="..\..\engine\ai\util\script.c" />
+    <ClCompile Include="..\..\engine\ai\util\struct.c" />
+    <ClCompile Include="..\..\platform\windows\win_main.c" />
+    <ClCompile Include="..\..\platform\windows\win_shared.c" />
+    <ClCompile Include="..\..\platform\windows\win_syscon.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\cgame\cg_public.h" />
-    <ClInclude Include="..\..\client\client.h" />
-    <ClInclude Include="..\..\client\keycodes.h" />
-    <ClInclude Include="..\..\client\keys.h" />
-    <ClInclude Include="..\..\game\bg_public.h" />
-    <ClInclude Include="..\..\game\g_public.h" />
-    <ClInclude Include="..\..\qcommon\cm_local.h" />
-    <ClInclude Include="..\..\qcommon\cm_patch.h" />
-    <ClInclude Include="..\..\qcommon\cm_polylib.h" />
-    <ClInclude Include="..\..\qcommon\cm_public.h" />
-    <ClInclude Include="..\..\qcommon\qcommon.h" />
-    <ClInclude Include="..\..\qcommon\qfiles.h" />
-    <ClInclude Include="..\..\qcommon\q_platform.h" />
-    <ClInclude Include="..\..\qcommon\q_shared.h" />
-    <ClInclude Include="..\..\qcommon\surfaceflags.h" />
-    <ClInclude Include="..\..\qcommon\unzip.h" />
-    <ClInclude Include="..\..\qcommon\vm_local.h" />
-    <ClInclude Include="..\..\server\server.h" />
-    <ClInclude Include="..\..\ui\ui_public.h" />
-    <ClInclude Include="..\resource.h" />
-    <ClInclude Include="..\win_local.h" />
+    <ClInclude Include="..\..\game\cgame\cg_public.h" />
+    <ClInclude Include="..\..\game\client\client.h" />
+    <ClInclude Include="..\..\game\client\keycodes.h" />
+    <ClInclude Include="..\..\game\client\keys.h" />
+    <ClInclude Include="..\..\game\shared\bg_public.h" />
+    <ClInclude Include="..\..\game\qgame\g_public.h" />
+    <ClInclude Include="..\..\engine\collision\cm_local.h" />
+    <ClInclude Include="..\..\engine\collision\cm_patch.h" />
+    <ClInclude Include="..\..\engine\collision\cm_polylib.h" />
+    <ClInclude Include="..\..\engine\collision\cm_public.h" />
+    <ClInclude Include="..\..\engine\core\qcommon.h" />
+    <ClInclude Include="..\..\engine\core\qfiles.h" />
+    <ClInclude Include="..\..\engine\common\q_platform.h" />
+    <ClInclude Include="..\..\engine\common\q_shared.h" />
+    <ClInclude Include="..\..\engine\common\surfaceflags.h" />
+    <ClInclude Include="..\..\engine\filesystem\unzip.h" />
+    <ClInclude Include="..\..\engine\vm\vm_local.h" />
+    <ClInclude Include="..\..\game\server\server.h" />
+    <ClInclude Include="..\..\game\ui\ui_public.h" />
+    <ClInclude Include="..\..\platform\windows\resource.h" />
+    <ClInclude Include="..\..\platform\windows\win_local.h" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\qe3.ico" />
+    <Image Include="..\..\platform\windows\qe3.ico" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="..\win_resource.rc" />
+    <ResourceCompile Include="..\..\platform\windows\win_resource.rc" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="botlib.vcxproj">
-      <Project>{a410161f-ae9f-485d-a01f-5294891430a6}</Project>
-      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <CustomBuild Include="..\..\asm\common_x64.asm">
+    <CustomBuild Include="..\..\platform\asm\common_x64.asm">
       <FileType>Document</FileType>
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">ml64 /c /Zi /Fo"$(IntDir)%(Filename)%(Extension).obj" "%(FullPath)"</Command>
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">ml64 /c /Zi /Fo"$(IntDir)%(Filename)%(Extension).obj" "%(FullPath)"</Command>
