Clean up test files and scripts from root directory
- Remove all test configuration files (test_*.cfg, rtx_*.cfg)
- Remove test batch scripts except build.bat which is needed
- Remove test source files and output logs
- Update .gitignore to prevent these files from being tracked
- Keep only essential build and documentation files

--- a/.gitignore
+++ b/.gitignore
@@ -73,10 +73,16 @@ src/project/msvc2017/output/
 /src/**/*.cfg
 test_*.bat
 test_*.c
+test_*.txt
 run_*.bat
 launch_*.bat
 compile_*.bat
-build.bat
+rtx_*.cfg
+rtx_*.txt
+rtx_*.bat
+volumetric_*.cfg
+enable_*.cfg
+# Keep build.bat - it's needed
 
 # Documentation and plan files  
 CLAUDE.md
